# django-temp-permissions

./: .bumpversion.cfg  .cz.toml  .env.example  .envrc  .envrc.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  manage.py  mkdocs.yml  package.json  pyproject.toml  pytest.ini  ruff.toml  system.py  tox.ini
.github/actions/python-uv-setup/: action.yaml
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
devops/azure/: azure-build.yml  azure-release.yml  azure-test.yml
docker/: Dockerfile  Dockerfile.base  Makefile
docker/etc/: circus.conf  entrypoint.sh
docs/design/: class_diagram.md
docs/src/: contributing.md  index.md  usage.md
src/django_temporary_permissions/: __init__.py  admin.py  apps.py  backends.py  checks.py  exceptions.py  flags.py  models.py  sentry.py  signals.py  validators.py
src/django_temporary_permissions/admin/: adm.py
src/django_temporary_permissions/cli/: __init__.py  utils.py
src/django_temporary_permissions/cli/commands/: upgrade.py
src/django_temporary_permissions/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/django_temporary_permissions/config/fragments/: constance.py  ddt.py  security.py  sentry.py  smartadmin.py
src/django_temporary_permissions/core/: admin.py  apps.py
src/django_temporary_permissions/core/fixtures/: core_init.yaml
src/django_temporary_permissions/core/management/commands/: demo.py  utils.py
src/django_temporary_permissions/management/commands/: upgrade.py
src/django_temporary_permissions/migrations/: 0001_initial.py  0002_update_help_text.py  0003_auto_20250908_1021.py  0004_remove_usertemporarypermission_created_at_and_more.py  0005_alter_usertemporarypermission_end_datetime_and_more.py
src/django_temporary_permissions/models/: example.py
src/django_temporary_permissions/utils/: reflect.py
src/django_temporary_permissions/web/: views.py
src/django_temporary_permissions/web/templates/: home.html
tests/: .coveragerc  conftest.py  factories.py  test_demo.py  test_temporary_permission.py
tests/demoapp/: .db.sqlite  manage.py
tests/demoapp/demo/: settings.py
tests/test_utils/: factories.py
tests/unit/: test_admin.py  test_backends.py  test_managers.py  test_validators.py
tools/dev/: drop_test_dbs.sh  fetchdb.sh  initdb.sh
