[project]
name = "django_temporary_permissions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.36",
    "mypy>=1.11.2",
    "pdbpp>=0.10.3",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "types-setuptools",
    "tox>=4.25.0",
    "pytest-django>=4.11.1",
    "pre-commit>=4.2.0",
]
django = ["django>=4.2"]

[tool.uv]
default-groups = ["django", "dev"]
